--- a/src/styles/components/seat-card.scss
+++ b/src/styles/components/seat-card.scss
@@ -55,6 +55,18 @@
                 text-align: center;
                 padding: 10px;
             }
+
+            &__disabled-btn {
+                display: flex;
+                width: 100%;
+                height: 100%;
+                justify-content: center;
+                background-color: $secondBg;
+                color: $white;
+                text-align: center;
+                padding: 10px;
+                cursor: auto;
+            }
         }
     }
 
