--- a/src/pages/FlightList/flight-list.scss
+++ b/src/pages/FlightList/flight-list.scss
@@ -20,5 +20,16 @@
 
     &__switch {
         padding: 20px 0;
+        margin-bottom: 10px;
+        font-weight: 600;
+
+    }
+
+    &__promosyon-active {
+        margin-bottom: 30px;
+        font-size: 11px;
+        gap: 30px;
+        display: flex;
+        flex-direction: column;
     }
 }
