--- a/src/styles/components/flight-time.scss
+++ b/src/styles/components/flight-time.scss
@@ -1,4 +1,7 @@
 .flight-time {
+    display: block;
+    max-width: 1200px;
+    
     &__content {
         display: flex;
         justify-content: center;
