--- a/src/pages/FlightList/flight-list.scss
+++ b/src/pages/FlightList/flight-list.scss
@@ -22,7 +22,7 @@
 
     &__info {
         font-size: 20px;
-        color: $flightDatePickerBg;
+        color: $secondTextColor;
     }
 
     &__switch {
