--- a/src/styles/utilty/variable.scss
+++ b/src/styles/utilty/variable.scss
@@ -8,3 +8,4 @@ $flightDatePickerBg: #222b39;
 $seatHeaderBg:#e9e8e8;
 $borderColor:#e3e3e3;
 $priceBlue: #0c58e6;
+$secondTextColor: rgb(0 0 0 / 60%);
